[package]
name = "server_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
histogram = "0.6"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
mime_guess = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockito = "1.0"
wiremock = "0.5"

[[bench]]
name = "performance_bench"
harness = false
